--- a/docs/tecnicos/mt02.md
+++ b/docs/tecnicos/mt02.md
@@ -93,3 +93,19 @@ Cómo ya se definió anteriormente, la extrusión del logo busca simular un inje
 ### Prueba de funcionamiento Manivela
 
 <div align="center"><iframe width="315" height="560" src="https://www.youtube.com/embed/92bcGKYHYZU" title="Prueba de funcionamiento - Manivela" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Descargar Archivo</title>
+</head>
+<body>
+  <h1>Descargar lámina</h1>
+  <p>Haz clic en el botón para descargar el archivo:</p>
+  <a href="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/lámina.pdf" download="lámina.pdf">
+    <button>Descargar Archivo</button>
+  </a>
+</body>
+</html>
