--- a/docs/tecnicos/mt03.md
+++ b/docs/tecnicos/mt03.md
@@ -96,3 +96,20 @@ El proceso de ensamble resultó bastante cómodo pero la verdad la estructura no
 
 
 <div align="center"><iframe width="315" height="560" src="https://www.youtube.com/embed/P7km__id6YI" title="Test de estabilidad" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Incrustar Link</title>
+</head>
+<body>
+  <h1>Enlace a archivos descargables</h1>
+  <p>Haz clic en el siguiente enlace para visitar el sitio:</p>
+  <a href="https://cad.onshape.com/documents/fd191ee1ab3b59649fb5ec40/w/0b4be31d1db3f5cfcf0091fd/e/1f16c72a06510f95fd900d75" target="_blank" rel="noopener noreferrer">
+    Archivos descargables del Módulo
+  </a>
+</body>
+</html>
