--- a/docs/tecnicos/mt09.md
+++ b/docs/tecnicos/mt09.md
@@ -160,3 +160,21 @@ Resulados finales
 ## Conclusión.
 
 Para el material compuesto debió ser mayor el tiempo de secado, al apresurar el desmolde se separaron las roscas del resto del modelo y también se partió al medio. Tanto las roscas como los ductos internos para los cables no se podrían conseguir con este molde (o quizá si se conseguirían pero sería casi imposible desmoldar sin romper). El hecho de que los soportes se quedaran incrustados en las ranuras de la rosca facilitó que se pudiera desmoldar el modelo hecho en resina epoxi. El desmolde para el colado con resina fue muy difícil, la resina se coló entre las juntas del molde lo que hizo que se pegaran y hubiera que acudir a la fuerza bruta para separarlos. La experiencia fue sumamente satisfactoria ya que me permitió experimentar con diferentes materiales y los obstáculos que surgen en el proceso, los aspectos a tener en cuenta a la hora de pensar en la manufactura por moldeo y las consideraciones de diseño a la hora de crear el molde.
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Incrustar Link</title>
+</head>
+<body>
+  <h1>Enlace a archivos descargables</h1>
+  <p>Haz clic en el siguiente enlace para visitar el sitio:</p>
+  <a href="https://cad.onshape.com/documents/9b0b873cd17b9bf86fdb64f5/w/1018f03aaec7d3da32a13d33/e/6179f6f5c395a4c366c48ca1">
+    Archivos descargables del Módulo
+  </a>
+</body>
+</html>
+
+
